--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ecommerce-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
