--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+MONGO_URI_DB="mongodb+srv://admin:admin@coder.v5glsz4.mongodb.net/coder?retryWrites=true&w=majority"
+MONGO_URI_SESSIONS= "mongodb+srv://admin:admin@coder.v5glsz4.mongodb.net/coder-sessions?retryWrites=true&w=majority"
