--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-sessions": "^1.0.6",
+    "mongoose": "^8.1.1",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
