--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=3000
 MONGO_URI_DB="mongodb+srv://admin:admin@coder.v5glsz4.mongodb.net/coder?retryWrites=true&w=majority"
 MONGO_URI_SESSIONS= "mongodb+srv://admin:admin@coder.v5glsz4.mongodb.net/coder-sessions?retryWrites=true&w=majority"
+GH_ID="Iv1.8b7a0e6d5d09a6fd"
+GH_SECRET="1084f7e3aaeeb5c1165a31651def8bc23edd1b98"
